0.4.2a Changelog: - Fix Voltage's text area going inivisible. - Fix the "No song playing..." text being off-center due to the new font

--- a/src/Plugins/index.css
+++ b/src/Plugins/index.css
@@ -8,6 +8,13 @@
     top: 5px!important;
 }
 
+/*Voltage Theme Text-area*/
+
+.voltage-textarea {
+    display: block;
+    background-color: var(--channeltextarea-background);
+}
+
 /*Powercord-Spotify*/
 .spotify-extra-controls {
     pointer-events: initial !important;
