--- a/src/UI/index.css
+++ b/src/UI/index.css
@@ -52,7 +52,7 @@
     font-size: 14px;
     text-align: center;
     color: #fff;
-    padding: 0px 60px;
+    padding: 0px 59px;
     position: relative;
     top: 45%;
     z-index: -1;
